# Aura-v1

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  .npmrc  .prettierignore  DEVELOPMENT.md  TROUBLESHOOTING.md  docker-compose.yml  install-rust.sh  nx.json  package-lock.json  package.json  pnpm-lock.yaml  sbom-universal.json  tsconfig.base.json  vercel.json
.bmad-core/: core-config.yaml  install-manifest.yaml
.bmad-core/templates/: brownfield-architecture-tmpl.yaml
.github/: dependabot.yml
.github/workflows/: build-test.yml  build-wasm.yml  crypto-core-ci.yml  crypto-core-security.yml  deploy.yml  sbom-generation.yml  security-audit.yml  slsa-build.yml  supply-chain-scan.yml
.nx/cache/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json  run.json
apps/api/: project.json  tsconfig.json
apps/mobile/: .env.example  App.tsx  TEST_SETUP.md  app.json  jest.config.js  metro.config.js  package.json  project.json  tamagui.config.ts  tsconfig.json
apps/web/: .env.example  index.html  next-env.d.ts  next.config.js  package.json  playwright.config.ts  project.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
db/: RLS_POLICY_DOCUMENTATION.md
db/functions/: healthcare_access_audit.sql
db/init/: 00-extensions.sql  001_development_setup.sql
db/migrations/: 001_initial_schema.sql  002_encrypted_tables.sql  README.md
docs/: custom-domain-setup.md  database-migration-workflow.md  local-development-database.md  mobile-app-store-setup.md
libs/crypto-core/: .npmignore  Cargo.toml  README.md  build_rs_cov.profraw  package-list.json  package.json  project.json  sbom-npm.json  sbom-universal.json  security-audit-package.json  security-audit-report.json  tsconfig.json  vitest.config.ts  vitest.setup.ts  vitest.web.config.ts
libs/crypto-core/__tests__/: derivation.test.ts  device.test.ts  security.test.ts  wasm-integration.test.ts
libs/crypto-core/__tests__/web/: web-platform.test.ts
libs/crypto-core/benches/: crypto_benchmarks.rs
libs/crypto-core/docs/: api-reference.md  integration-guide.md  integration-patterns.md  security-audit-checklist.md  security-audit-report.html  threat-model.md  usage-examples.md
libs/crypto-core/fuzz/: Cargo.toml
libs/crypto-core/fuzz/fuzz_targets/: aad_validation.rs  encrypt_decrypt.rs  envelope_parsing.rs  key_operations.rs
libs/crypto-core/pkg/: .gitignore  crypto_core.d.ts  crypto_core.js  crypto_core_bg.js  crypto_core_bg.wasm  crypto_core_bg.wasm.d.ts  package.json
libs/crypto-core/scripts/: check-bundle-size.js  check-integrity.js  generate-docs.js  prepare-security-audit.js  release-manager.js  validate-build.js
libs/crypto-core/src/: aad.rs  bindings.rs  derivation.rs  device.rs  envelope.rs  index.ts  integration.rs  integration.ts  key_rotation.rs  keys.rs  lib.rs  memory.rs  multi_device.rs  recovery.rs  secure_storage.rs  security.rs
libs/crypto-core/src/key_rotation/: audit.rs  audit.test.ts.skip  emergency.rs  emergency.test.ts.skip  manager.rs  migration.rs  migration.test.ts  mod.rs  scheduler.incident.test.ts.skip  scheduler.rs  scheduler.test.ts  sync.rs  sync.test.ts  testing.rs  testing.test.ts.skip  types.rs  versioned_key.rs  versioned_key.test.ts.skip
libs/crypto-core/tests/: memory_leak_tests.rs  property_based.rs  regression_tests.rs  simple_test.rs
scripts/: build-crypto-only.sh  build-with-rust.sh  dev-setup.sh  generate-secrets.js  setup-https.sh  setup-supabase-cli.js  test-service-integration.js  validate-supabase-config.js
supabase/: config.toml  database-monitoring.toml  seed.sql
(+775 files in other folders)
