[package]
name = "crypto-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
zeroize = "1.5"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
wasm-bindgen-futures = "0.4"
# Using WASM-compatible crypto libraries instead of libsodium-sys/ring
rand = { version = "0.8", features = ["getrandom"] }
argon2 = "0.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []

# wee_alloc is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
[profile.release]
opt-level = "s"
lto = true