[package]
name = "crypto-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "crypto_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
zeroize = "1.5"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# Using WASM-compatible crypto libraries instead of libsodium-sys/ring
rand = { version = "0.8", features = ["getrandom"] }
argon2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Performance",
  "PerformanceTiming",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
proptest = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
bytes = "1.0"
tokio = { version = "1.0", features = ["rt", "macros"] }
arbitrary = { version = "1.0", features = ["derive"] }
libfuzzer-sys = "0.4"
hex = "0.4"

[[bench]]
name = "crypto_benchmarks"
harness = false

[features]
default = []

# wee_alloc is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
[profile.release]
opt-level = "s"
lto = true