[package]
name = "crypto-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.0", features = ["derive"] }

[dependencies.crypto-core]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "encrypt_decrypt"
path = "fuzz_targets/encrypt_decrypt.rs"
test = false
doc = false

[[bin]]
name = "envelope_parsing"
path = "fuzz_targets/envelope_parsing.rs"
test = false
doc = false

[[bin]]
name = "key_operations"
path = "fuzz_targets/key_operations.rs"
test = false
doc = false

[[bin]]
name = "aad_validation"
path = "fuzz_targets/aad_validation.rs"
test = false
doc = false